Vectorized initialization of weight matrix